--- a/music-app/music-app/Controllers/Cells/TableViewCells/PlaylistSection/TrackInPlaylistCell/TrackInPlaylistCell.xib
+++ b/music-app/music-app/Controllers/Cells/TableViewCells/PlaylistSection/TrackInPlaylistCell/TrackInPlaylistCell.xib
@@ -51,7 +51,7 @@
                                             </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E50-HB-d4O">
                                                 <rect key="frame" x="64" y="0.0" width="5" height="15"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </view>
                                         </subviews>
                                     </stackView>
