--- a/music-app/music-app/Controllers/ViewControllers/LibrarySection/LibraryPlaylistsController/LibraryPlaylistsController.xib
+++ b/music-app/music-app/Controllers/ViewControllers/LibrarySection/LibraryPlaylistsController/LibraryPlaylistsController.xib
@@ -13,6 +13,7 @@
                 <outlet property="descriptionLabel" destination="hLE-ie-ag4" id="XHh-5N-Soa"/>
                 <outlet property="emptyImageView" destination="Qgq-z2-Hqh" id="aTg-pP-f5n"/>
                 <outlet property="emptyInfoView" destination="MBh-5d-YUf" id="7rN-QA-khK"/>
+                <outlet property="nowPlayingView" destination="vCq-1L-JIV" id="ckh-jA-zJd"/>
                 <outlet property="playlistsTableView" destination="2V2-bd-bGX" id="zJj-FP-304"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -23,11 +24,11 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="2V2-bd-bGX">
-                    <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                    <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </tableView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MBh-5d-YUf">
-                    <rect key="frame" x="86.666666666666686" y="291" width="220" height="270"/>
+                    <rect key="frame" x="86.666666666666686" y="303.66666666666669" width="220" height="270.00000000000006"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="questionmark.square.dashed" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Qgq-z2-Hqh">
                             <rect key="frame" x="10" y="11.666666666666657" width="200" height="197"/>
@@ -39,7 +40,7 @@
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="There is no playlists. Tap here to create playlist" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hLE-ie-ag4">
-                            <rect key="frame" x="10" y="220" width="200" height="40.666666666666686"/>
+                            <rect key="frame" x="10" y="219.99999999999994" width="200" height="40.666666666666686"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -57,15 +58,25 @@
                         <constraint firstAttribute="height" constant="270" id="zwx-NE-s0b"/>
                     </constraints>
                 </view>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vCq-1L-JIV" customClass="NowPlayingView" customModule="music_app" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="763" width="393" height="55"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="55" id="Ren-hT-hMq"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="2V2-bd-bGX" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="8H7-Uq-3jd"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="vCq-1L-JIV" secondAttribute="trailing" id="GBN-jX-qrL"/>
                 <constraint firstItem="2V2-bd-bGX" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="PtI-RW-V8S"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="2V2-bd-bGX" secondAttribute="bottom" id="RcV-KO-qad"/>
                 <constraint firstItem="MBh-5d-YUf" firstAttribute="centerX" secondItem="2V2-bd-bGX" secondAttribute="centerX" id="bg5-Co-gGa"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="vCq-1L-JIV" secondAttribute="bottom" id="gSU-bK-w7N"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="2V2-bd-bGX" secondAttribute="trailing" id="iQY-iv-G44"/>
+                <constraint firstItem="vCq-1L-JIV" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="iaE-z9-z2N"/>
                 <constraint firstItem="MBh-5d-YUf" firstAttribute="centerY" secondItem="2V2-bd-bGX" secondAttribute="centerY" id="mVy-k3-nFj"/>
             </constraints>
             <point key="canvasLocation" x="116.79389312977099" y="20.422535211267608"/>
